@@ -225,6 +225,10 @@ Prints the package provides.
 
 Prints the package requires.
 
+=item B<--suggests>
+
+Prints the package suggests.
+
 =item B<--sourcerpm>
 
 Prints the sourcerpm of the package
