@@ -165,7 +165,7 @@ _urpmq()
 			--sortmedia --synthesis --auto-select --auto-orphans \
 			--no-suggests --fuzzy --keep --nokeep \
 			--list --list-url --list-media --list-nodes --list-aliases \
-			--src --sources --provides --requires --summary --sourcerpm --force --parallel --wget --curl --prozilla \
+			--src --sources --provides --requires --suggests --summary --sourcerpm --force --parallel --wget --curl --prozilla \
 			--changelog --conflicts --proxy --proxy-user --env --dump-config \
 			--whatprovides --whatrequires --whatrequires-recursive \
 			--skip --prefer \
