@@ -82,6 +82,7 @@ usage:
 ") . N("  --conflicts    - print conflicts.
 ") . N("  --provides     - print provides.
 ") . N("  --requires     - print requires.
+") . N("  --suggests     - print suggests.
 ") . N("  --sourcerpm    - print sourcerpm.
 ") . N("  --summary, -S  - print summary.
 ") . N("  --verbose, -v  - verbose mode.
@@ -490,8 +491,7 @@ if ($options{list_aliases}) {
 	    }
 	}
 	exit 0;
-    } elsif ($options{provides} || $options{requires} || $options{conflicts}) {
-	my $get = $options{provides} ? 'provides' : $options{requires} ? 'requires' : 'conflicts';
+    } elsif (my ($get) = grep { $options{$_} } 'provides', 'requires', 'conflicts', 'suggests') {
 	my @l = uniq_ { scalar $_->fullname } map { $urpm->{depslist}[$_] } map { split /\|/, $_ } keys %{$state->{selected}};
 	foreach my $pkg (@l) {
 	    if (@l > 1) {
