@@ -1,3 +1,7 @@
+- urpmq:
+  o --suggests now displays the suggested packages, see --allow-suggests for
+    previous behaviour (#39726)
+
 Version 6.0 - 8 July 2008, by Pascal "Pixel" Rigaux
 
 - all tools:
